--- a/frontend/src/app/pages/edit-profile/edit-profile.component.html
+++ b/frontend/src/app/pages/edit-profile/edit-profile.component.html
@@ -50,7 +50,7 @@
     </div>
   </div>
 
-  <div *ngIf="userType == 'nastavnik'">
+  <div *ngIf="showExtraFields">
     <div>
       <label for="status" class="block text-sm font-medium text-gray-700">Status</label>
       <input id="status" formControlName="status" type="text"
