--- a/frontend/src/app/pages/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/pages/nav-bar/nav-bar.component.html
@@ -11,4 +11,9 @@
     class="px-4 py-2 bg-white-600 rounded-mb hover:bg-grey-700 transition-colors">
     Register
   </button>
+
+  <button (click)="goToPrijaviIspit()"
+    class="px-4 py-2 bg-white-600 rounded-mb hover:bg-grey-700 transition-colors">
+   prijava ispita
+  </button>
 </div>
