bugovi i dodat student-predmet prikaz i obavjestenja

--- a/frontend/src/app/app.component.html
+++ b/frontend/src/app/app.component.html
@@ -331,5 +331,6 @@
 <!-- * * * * * * * * * * End of Placeholder  * * * * * * * * * * * * -->
 <!-- * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * * -->
 
-
+<app-nav-bar>
+</app-nav-bar>
 <router-outlet />
