--- a/frontend/src/app/pages/nav-bar/nav-bar.component.html
+++ b/frontend/src/app/pages/nav-bar/nav-bar.component.html
@@ -14,12 +14,17 @@
     Register
   </button>
 
+<button *ngIf="isLogged()" (click)="goToEdit()"
+  class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700 transition-colors">
+  Uredi Profil
+</button>
+
   <button (click)="goToUniverziteti()"
     class="px-4 py-2 bg-white-600 rounded-mb hover:bg-gray-700 transition-colors">
     Univerziteti
   </button>
 
-  <div class="relative inline-block text-left">
+ <div class="relative inline-block text-left">
     <button (click)="showBiblioteka= !showBiblioteka"
       class="px-4 py-2 bg-gray-300 rounded hover:bg-gray-400 transition-colors">
       Bibliotek Menu ▼
@@ -83,6 +88,14 @@
 
     <div *ngIf="showAdmin"
       class="absolute mt-2 w-48 bg-white border rounded shadow-lg z-50">
+      <button (click)="goToNastavniciPrikaz()"
+        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
+       Prikzi Nastavnike
+      </button>
+      <button (click)="goToStudenti()"
+        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
+       Prikzi Studente
+      </button>
       <button (click)="goToDodajPredmet()"
         class="block w-full text-left px-4 py-2 hover:bg-gray-200">
         Dodaj Predmeti
@@ -109,15 +122,19 @@
       </button>
       <button (click)="goToDodajPow()"
         class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Dodaj powUser
+        Dodaj Admin
+      </button>
+      <button (click)="goToDodajNastavnik()"
+        class="block w-full text-left px-4 py-2 hover:bg-gray-200">
+        Dodaj nastavnik
       </button>
       <button (click)="goToSifarnik()"
         class="block w-full text-left px-4 py-2 hover:bg-gray-200">
         Sifarnik
       </button>
-      <button (click)="goToExport()"
+      <button (click)="dodajZavrsni()"
         class="block w-full text-left px-4 py-2 hover:bg-gray-200">
-        Export User
+        Dodaj Zavrsni Rad
       </button>
     </div>
   </div>
