--- a/frontend/src/app/pages/prikazi-program/prikazi-program.component.html
+++ b/frontend/src/app/pages/prikazi-program/prikazi-program.component.html
@@ -24,6 +24,9 @@
         <div *ngFor="let silabus of silabusi" class="bg-white p-3 rounded shadow text-sm">
           <p class="text-gray-600">{{ silabus.sadrzaj }}</p>
         </div>
+        <div *ngFor="let materijal of nastavniMaterijali" class="bg-white p-3 rounded shadow text-sm">
+          <p class="text-gray-600">{{ materijal.opis}}</p>
+        </div>
       </div>
     </div>
   </div>
