--- a/frontend/src/app/pages/admin-dodaj-predmet/admin-dodaj-predmet.component.html
+++ b/frontend/src/app/pages/admin-dodaj-predmet/admin-dodaj-predmet.component.html
@@ -14,7 +14,7 @@
     <label class="block mb-1 text-sm font-medium text-gray-700">ESPB</label>
     <input
       type="number"
-      formControlName="espb"
+      formControlName="esbp"
       class="w-full border border-gray-300 rounded px-3 py-2 focus:outline-none focus:ring-2 focus:ring-blue-500"
       placeholder="Unesite ESPB"
     />
